# actix_seaorm_api

./: Cargo.toml
src/: actix_seaorm_api.rs  main.rs  posts.rs
