[package]
name = "actix_seaorm_api"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "migration"]

[dependencies]
actix-web = "4.2.1"
serde = "1.0.152"
async-trait = "0.1.62"

[dependencies.sea-orm]
version = "0.10.7" # sea-orm version
features = [
    "debug-print",
    "runtime-async-std-native-tls",
    # "sqlx-mysql",
    # "sqlx-postgres",
    "sqlx-sqlite",
]
